tests/ui/sentinel/sentinel_on_enum.rs
use feotest::sentinel;

#[sentinel]
enum NotAStruct {
    A,
    B,
}

fn main() {}
